[package]
name = "f3-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "f3webapi"
path = "src/bin/web_api.rs"

[[bin]]
name = "f3botscraper"
path = "src/bin/bot_scraper.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate_old_data.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
actix-session = { version = "0.7.1", features = ["cookie-session"] }
tracing-actix-web = "0.6"
oauth2 = "4.2.3"
dotenvy = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde-aux = "3"
url = "2"
http = "0.2.8"
serde_qs = "0.10.1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
serde_with = { version = "2.0.0", features = ["chrono_0_4"] }
hmac = "0.12.1"
sha2 = "0.10.2"
hex-literal = "0.3.4"
hex = "0.4.3"
csv = "1.1"
config = "0.13"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
log = "0.4"
secrecy = { version = "0.8", features = ["serde"] }
env_logger = "0.9"
# old dep forked -> charts = "0.3.0"
charts = { git = "https://github.com/etkachev/rustplotlib.git" }
resvg = "0.29.0"
reqwest = { version = "0.11", features = ["multipart"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "json"
]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
